--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
 		<title>{{ title or metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 		<link rel="alternate" href="feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+		<link href="https://www.nerdfonts.com/assets/css/combo.css" rel="stylesheet" type="text/css">
 
 		{#- Uncomment this if you’d like folks to know that you used Eleventy to build your site!  #}
 		{#- <meta name="generator" content="{{ eleventy.generator }}"> #}
